# bork

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: decisions-and-learnings.md  planning.md
scripts/: verify.sh
skills/: bork-cli.md  worktree.md
src/: agent_config.rs  app.rs  config.rs  error.rs  global_config.rs  handler.rs  init.rs  lock.rs  main.rs  ops.rs  toml_lite.rs  types.rs  update.rs  worktree.rs
src/input/: action.rs  keybindings.rs  mod.rs
src/ui/: board.rs  card.rs  debug_inspector.rs  dialog.rs  help.rs  linear_picker.rs  mod.rs  sidebar.rs  status_bar.rs  styles.rs
templates/: AGENTS.md  CLAUDE.md
