[package]
name = "bork"
version = "0.1.0"
edition = "2021"
description = "Terminal kanban board for orchestrating OpenCode/Claude sessions"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
ratatui-textarea = "0.8"
